<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="gamefragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/leaveGameButton"
        android:layout_width="104dp"
        android:layout_height="76dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/DeepRed"
        android:elevation="16dp"
        android:text="@string/leave_game"
        android:translationZ="16dp"
        app:cornerRadius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/gradient_end"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:id="@+id/linearTimeContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/time_background_gameboard"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelTimePlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_playing"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <TextView
            android:id="@+id/timeCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gameTime"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>

    <com.example.stratego_app.ui.GameBoardView
        android:id="@+id/gameBoardView"
        android:layout_width="379dp"
        android:layout_height="379dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/linearTimeContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonContainer"
        app:layout_constraintVertical_bias="0.1" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/AshGray"
            android:elevation="16dp"
            android:text="info"
            android:translationZ="16dp"
            app:cornerRadius="8dp"
            app:strokeColor="@color/gradient_end"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/nuke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@color/AshGray"
            android:elevation="16dp"
            android:text="nuke"
            android:translationZ="16dp"
            app:cornerRadius="8dp"
            app:strokeColor="@color/gradient_end"
            app:strokeWidth="2dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
